# InvestorSidecarWebScraping

./: .gitignore  Makefile  README.md  Redfin API Documentation.md  devtools.mk  geocoding_utils.py  pyproject.toml  redfin_scraping_utils.py
docker/: docker-compose.yaml  vars.env-template
docker/pythonenv/: Dockerfile  entrypoint.sh
notebooks/: apartments_com.ipynb  example_notebook.ipynb  redfin_scraper.ipynb
notebooks/Property_Tax_scraping/: propety_tax_webscraper_smartasset.ipynb  tax_rates_final.csv
src/: redfin_scraping_utils.py
